Remove option '-stoponerror', and describe the reason for removing it

--- a/tip/601.md
+++ b/tip/601.md
@@ -1,19 +1,20 @@
-# TIP 601: "encoding convertto/convertfrom" option to stop on error
+# TIP 601: Make "encoding convertto/convertfrom" throw exceptions
 	Author:         Harald Oehlmann <harald.oehlmann@elmicron.de>
 	State:          Draft
 	Type:           Project
 	Vote:           Pending
-	Tcl-Version:    8.7
+	Tcl-Version:    9.0
 	Tcl-Branch:     encodings-with-flags
 -----
 # Abstract
 
-An additional option is proposed for `encoding convertto/convertfrom` to stop on the first encoding issue.
-In addition, this change is proposed as default vaue for TCL9.x series.
+This TIP proposes to change the behavior of `encoding convertto/convertfrom`
+in Tcl 9.0, to start throwing an exception on any conversion error.
+An additional option `-nothrow` is proposed to restore the Tcl 8.x behavior.
 
 # Rationale
 
-The command `encoding convertfrom/convertto` currently does not raise any error on not convertable input.
+The command `encoding convertfrom/convertto` currently does not raise any error on not convertible input.
 Instead the following actions are observed:
 
    *   A replacement character `?` is used.
@@ -58,16 +59,16 @@ It would be great to know, where the error is to stop the sequence.
 
 Here is a code snipped with the current implementation:
 
-    % catch {encoding convertfrom -stoponerror utf-8 [string range [encoding convertto utf-8 ÄÖ] 0 end-1]} e d
+    % catch {encoding convertfrom utf-8 [string range [encoding convertto utf-8 ÄÖ] 0 end-1]} e d
     1
     % set d
         -code 1\
         -level 0
-        -errorstack {INNER {invokeStk1 ::tcl::encoding::convertfrom -stoponerror utf-8 Ã\x84Ã }}
+        -errorstack {INNER {invokeStk1 ::tcl::encoding::convertfrom utf-8 Ã\x84Ã }}
         -errorcode {TCL ENCODING STOPONERROR 2}
         -errorinfo {unexpected byte sequence starting at index 2: '\xC3'
             while executing
-            "encoding convertfrom -stoponerror utf-8 [string range [encoding convertto utf-8 ÄÖ] 0 end-1]"} -errorline 1
+            "encoding convertfrom utf-8 [string range [encoding convertto utf-8 ÄÖ] 0 end-1]"} -errorline 1
 
 Note: "\\0x84" was replaced for the control character "IND" for visibility in the stack trace
 
@@ -92,23 +93,15 @@ This causes issues in a multi-platform applications, as the error is not detecte
 # Specification
 
 ## New Option
-The `encoding` ensemble will be extended by two new options `-nothrow` and `-stoponerror`:
+The `encoding` ensemble will be extended by a new option `-nothrow`:
 
-    encoding convertfrom ?-nothrow|-stoponerror? ?encoding? data
-    encoding convertto ?-nothrow|-stoponerror|? ?encoding? data
+    encoding convertfrom ?-nothrow? ?encoding? data
+    encoding convertto ?-nothrow? ?encoding? data
 
-The specified options have the following functionality:
-
-| Options   | Description |
-|:-------:|:----------------:|
-| `-nothrow` | Any conversion data error is handled by replacement (by **?** or **U+FFFD**) of the concerned byte |
-| `-stoponerror`  | The conversion stops with an error on any conversion data error |
-
-The default value is `-nothrow` for TCL 8.x and `-stoponerror` for TCL 9.x.
-
-## Error reporting
-
-If `-stoponerror` is active, the following error reporting takes place in case of an conversion error.
+In Tcl 8.x, `-nothrow` has no effect since those encoding subcommands
+currently never throw an exception:  Any invalid byte/character is replaced
+(by **?** or **U+FFFD**). In Tcl 9.0, those subcommands start throwing and exception
+on any conversion data error, `-nothrow` restores the Tcl 8.x behavior.
 
 ### Definition of "error position"
 The position of the error in the source string is indicated in the error reporting.
@@ -146,7 +139,7 @@ an additional `flags` parameter accepting the following additional values (can b
 * TCL_ENCODING_MODIFIED: convert NULL bytes to \\xC0\\x80 in stead of 0x00. Only valid for "utf-8" and "cesu-8". This flag may be used together with the other flags.
 
 The TCL_ENCODING_MODIFIED flag can be used in extensions for generating "modified" encodings, such as java
-(which uses "modified" cesu-8 internally). This flag is not exposed at script level, unlike `-stoponerror`/`-nothrow`.
+(which uses "modified" cesu-8 internally). This flag is not exposed at script level, unlike `-nothrow`.
 
 The return value of these two functions is the error-position in case of an error reporting, or `(size_t)-1` if everything is OK.
 
@@ -157,12 +150,6 @@ The return value of these two functions is the error-position in case of an erro
 This TIP started in the [TCL ticket 535705](https://core.tcl-lang.org/tcl/info/535705ffffffffff).
 Please refer to this ticket for information about the initial discussion.
 
-## Option design
-
-The requirement to have two ortogonal flags is due to the fact, that it was proposed to change the default value from `-nothrow` to `-stoponerror` with **TCL9**.
-Otherwise, it is not possible to write code for **TCL8** and **TCL9**.
-The ortogonal option `-nothrow`is not required if this default change is not seen as a possibility (it may be a vote option).
-
 ## Error reporting design
 
 The list of categories for the error code return is given in the [tclvars manual page](http://www.tcl-lang.org/man/tcl8.7/TclCmd/tclvars.htm#M12).
@@ -171,7 +158,7 @@ The **TCL** category matches best.
 This design allows to catch this error and get the error position by the following `try` pattern:
 
     try {
-        set res [encoding convertto -stoponerror iso8859-1 $input]
+        set res [encoding convertto iso8859-1 $input]
     } trap {TCL ENCODING STOPONERROR} {errorMessage errorDict} {
         set errorIndex [lindex [dict get $errorDict -errorcode] 3]
         ...
@@ -186,10 +173,15 @@ This may be a control character corrupting a terminal view.
 IMHO error messages should be in the printable ASCII character set.
 Therefore this was removed, the character/byte is now only reported in hexadecimal notation.
 
-## --stoponerror as boolean option
+## -nothrow as boolean option
 
-An alternative would be to use `-stoponerror 1` in stead of `-stoponerror` and `-stoponerror 0` in stead of `-nothrow`.
+An alternative would be to use `-nothrow 1` in stead of `-nothrow` and `-nothrow 0` in stead of `-nothrow`.
 This only makes the command longer, without much benefit.
+
+## -stoponerror
+
+This option is the reverse of `-nothrow`, but much less descriptive. In combination with `-nothrow`,
+it causes more confusion than that it helps.
 
 ## EILSEQ POSIX error code
 
