TIP #577 in Voting state

--- a/tip/608.md
+++ b/tip/608.md
@@ -1,7 +1,8 @@
 # TIP 608: Add virtual event when font configuration changes
 	Author:         Brian Griffin <briang42@easystreet.net>
-	State:          Voting
+	State:          Draft
 	Type:           Project
+	Vote:           In progress
 	Created:        07-Aug-2021
 	Post-History:   
 	Keywords:       Tk,font,WorldChanged,event
