--- a/tip/445.md
+++ b/tip/445.md
@@ -20,13 +20,30 @@ custom `Tcl_ObjType`s.
 
 # Background
 
-When an extension creates a custom **Tcl\_ObjType** it needs to operate on the fields of the **Tcl\_Obj** and the **Tcl\_ObjType** structs.
+When an extension creates a custom **Tcl\_ObjType** it needs to operate
+on the fields of the **Tcl\_Obj** and the **Tcl\_ObjType** structs.
 
-Almost all of these operations have been nicely encapsulated in utility routines, so for example, an extension calls **Tcl\_GetString** to make sure a value is set for _objPtr->bytes_, rather than worrying about the backing details of calling the routine _objPtr->typePtr->updateStringProc_ \(if present\) for itself.  Likewise **Tcl\_DuplicateObj** routes processing to type-specific routines as needed.
+Almost all of these operations have been nicely encapsulated in utility
+routines, so for example, an extension calls **Tcl\_GetString** to make
+sure a value is set for _objPtr->bytes_, rather than worrying about the
+backing details of calling the routine _objPtr->typePtr->updateStringProc_
+\(if present\) for itself.  Likewise **Tcl\_DuplicateObj** routes
+processing to type-specific routines as needed.
 
-There are gaps in this interface.  Most glaring is the lack of any way to call the _freeIntRepProc_ of an incumbent type other than directly through the _typePtr_ field.  Another missing bit is an encapsulated way to set the string rep without direct manipulation of the _bytes_ and _length_ fields.  Within Tcl itself, there are internal utility macros **TclFreeIntRep** and **TclInitStringRep** for these tasks, but extensions have nothing.
+There are gaps in this interface.  Most glaring is the lack of any way
+to call the _freeIntRepProc_ of an incumbent type other than directly
+through the _typePtr_ field.  Another missing bit is an encapsulated way
+to set the string rep without direct manipulation of the _bytes_
+and _length_ fields.  Within Tcl itself, there are internal utility
+macros **TclFreeIntRep** and **TclInitStringRep** for these tasks,
+but extensions have nothing.
 
-Besides convenience, utility routines such as these improve chances for correctness, since they bring constraints into one place instead of many places.  For example, the requirement that when _objPtr->typePtr_ is not NULL, it must be paired with an appropriate _objPtr->internalRep_.  The **TclFreeIntRep** macro has a history of fixing such bugs.  A corresponding routine will offer the same benefit to extensions.
+Besides convenience, utility routines such as these improve chances
+for correctness, since they bring constraints into one place instead of
+many places.  For example, the requirement that when _objPtr->typePtr_
+is not NULL, it must be paired with an appropriate _objPtr->internalRep_.
+The **TclFreeIntRep** macro has a history of fixing such bugs.  A
+corresponding routine will offer the same benefit to extensions.
 
 # Proposal
 
