Update TIP 445 to the new names that arose out of TCLCORE discussion.

--- a/tip/445.md
+++ b/tip/445.md
@@ -49,7 +49,7 @@ corresponding routine will offer the same benefit to extensions.
 
 Add to Tcl's stub table of public C routines a new routine
 
- > void **Tcl\_FreeIntRep**\(Tcl\_Obj\* _objPtr_\)
+ > void **Tcl\_FreeInternalRep**\(Tcl\_Obj\* _objPtr_\)
 
 that performs precisely the same task as the existing internal
 macro **TclFreeIntRep**.
@@ -82,7 +82,7 @@ an internal type that is managed by the extension.
 
 Define a new public type
 
- > typedef union **Tcl\_ObjIntRep** \{...\} **Tcl\_ObjIntRep**
+ > typedef union **Tcl\_ObjInternalRep** \{...\} **Tcl\_ObjInternalRep**
 
 where the contents are exactly the existing contents of the union
 in the _internalRep_ field of the **Tcl\_Obj** struct.  This definition
@@ -91,7 +91,7 @@ arguments and results in public routines.
 
 Add to Tcl's stub table of public C routines a new routine 
 
- > void **Tcl\_StoreIntRep**\(Tcl\_Obj\* _objPtr_, const Tcl\_ObjType\* _typePtr_, const Tcl\_ObjIntRep\* _irPtr_\)
+ > void **Tcl\_StoreInternalRep**\(Tcl\_Obj\* _objPtr_, const Tcl\_ObjType\* _typePtr_, const Tcl\_ObjInternalRep\* _irPtr_\)
 
 which stores in _objPtr_ a copy of the internal representation pointed
 to by _irPtr_ and sets its type to _typePtr_.  When _irPtr_ is NULL,
@@ -99,7 +99,7 @@ this leaves _objPtr_ without a representation for type _typePtr_.
 
 Add to Tcl's stub table of public C routines a new routine 
 
- > Tcl\_ObjIntRep\* **Tcl\_FetchIntRep**\(Tcl\_Obj\* _objPtr_, const Tcl\_ObjType\* _typePtr_\)
+ > Tcl\_ObjInternalRep\* **Tcl\_FetchInternalRep**\(Tcl\_Obj\* _objPtr_, const Tcl\_ObjType\* _typePtr_\)
 
 which returns a pointer to the internal representation stored
 in _objPtr_ that matches the requested type _typePtr_.  If no such
@@ -107,15 +107,28 @@ internal representation is in _objPtr_, return NULL.
 
 # Compatibility
 
-These are new routines, so they have no compatibility concerns in the sense of cause trouble for existing working code.
+These are new routines, so they have no compatibility concerns in
+the sense of cause trouble for existing working code.
 
-They do help set up an improved compatibility scenario for the future however.  Extensions that use these new routines to stop directly referring to the fields of the **Tcl\_Obj** and **Tcl\_ObjType** structs are prepared to support a source-compatible migration to a Tcl 9 that might then be free to make revisions to those structs.
+They do help set up an improved compatibility scenario for the future
+however.  Extensions that use these new routines to stop directly
+referring to the fields of the **Tcl\_Obj** and **Tcl\_ObjType** structs
+are prepared to support a source-compatible migration to a Tcl 9 that
+might then be free to make revisions to those structs.
 
 # Implementation
 
-Taking shape on the tip-445 branch.
+See the tip-445 branch.
 
 # Rejected Alternatives
+
+At the time of its approval vote, this TIP proposed routines and a type 
+with the names **Tcl\_FreeIntRep**, **Tcl\_ObjIntRep**, **Tcl\_StoreIntRep**,
+and **Tcl\_FetchIntRep**.  Post-vote discussion on the TCLCORE mailing list
+raised the criticisms that **IntRep** was easily confused and typoed with
+the common **Tcl\_Interp** variable name *interp*, and could also falsely
+suggest some relationship to integer types in the minds of many programmers.
+All names were changed to replace **IntRep** with **InternalRep**.
 
 # Copyright
 
