--- a/tip/608.md
+++ b/tip/608.md
@@ -1,13 +1,17 @@
 # TIP 608: Add virtual event when font configuration changes
 	Author:         Brian Griffin <briang42@easystreet.net>
-	State:          Draft
+	State:          Accepted
 	Type:           Project
-	Vote:           In progress
+	Vote:           Done
 	Created:        07-Aug-2021
 	Post-History:   
 	Keywords:       Tk,font,WorldChanged,event
 	Tcl-Version:    8.6
 	Tk-Ticket:      3049518
+	Vote-Summary    Accepted 5/0/0
+	Votes-For:      BG, FV, KW, SL, JN
+	Votes-Against:  none
+	Votes-Present:  none
 -----
 
 # Abstract
