Update TIP status (605 and 608)

--- a/tip/605.md
+++ b/tip/605.md
@@ -1,13 +1,17 @@
 # TIP 605: Function to get class name from object
 	Author:         René Zaumseil <r.zaumseil@freenet.de>
-	State:          Draft
+	State:          Final
 	Type:           Project
-	Vote:           In progress
+	Vote:           Done
 	Created:        15-Jul-2021
 	Post-History:   
 	Keywords:       Tcl
 	Tcl-Version:    8.7
 	Tcl-Branch:     tip-605
+	Vote-Summary    Accepted 7/0/0
+	Votes-For:      AK, FV, JN, KBK, KW, MC, SL
+	Votes-Against:  none
+	Votes-Present:  none
 -----
 
 # Abstract
