--- a/tip/608.md
+++ b/tip/608.md
@@ -1,6 +1,6 @@
 # TIP 608: Add virtual event when font configuration changes
 	Author:         Brian Griffin <briang42@easystreet.net>
-	State:          Accepted
+	State:          Final
 	Type:           Project
 	Vote:           Done
 	Created:        07-Aug-2021
