Update TIP #577 status

--- a/tip/577.md
+++ b/tip/577.md
@@ -1,13 +1,17 @@
 # TIP 577: Enhanced index values for Tk
 	Author:         Jan Nijtmans <jan.nijtmans@gmail.com>
-	State:          Draft
+	State:          Final
 	Type:           Project
-	Vote:           In progress
+	Vote:           Done
 	Created:        8-June-2020
 	Post-History:   
 	Keywords:       Tcl index
 	Tcl-Version:    8.7
 	Tk-Branch:      enhanced-index
+	Vote-Summary    Accepted 5/0/1
+	Votes-For:      BG, JN, KW, MC, SL 
+	Votes-Against:  none
+	Votes-Present:  KBK
 -----
 
 # Abstract
