TIP 568 moved to state Final.

--- a/tip/568.md
+++ b/tip/568.md
@@ -1,6 +1,6 @@
 # TIP 568: Revise ByteArray Routines To Support Proper Value Extraction
 	Author:         Don Porter <dgp@users.sourceforge.net>
-	State:          Accepted
+	State:          Final
 	Type:           Project
 	Vote:           Done
 	Created:        4-Mar-2020
