Record reason for withdrawal of TIP #555.

--- a/tip/555.md
+++ b/tip/555.md
@@ -64,3 +64,7 @@ I expect something like this
 * This feature gives me the opportunity to introspect my theme.
 * This feature will gives me together with the other arguments of the ttk::style commands the opportunity to compare different themes.  
 * This feature will also make it easier to clone a style and to modify it.  
+
+# Discussion
+
+This TIP was withdrawn since it TIP #584 provides the requested functionality.
