Typo in previous commit.

--- a/tip/555.md
+++ b/tip/555.md
@@ -67,4 +67,4 @@ I expect something like this
 
 # Discussion
 
-This TIP was withdrawn since it TIP #584 provides the requested functionality.
+This TIP was withdrawn since TIP #584 provides the requested functionality.
