Bring TIP #610 fully in line with the implementation.

--- a/tip/610.md
+++ b/tip/610.md
@@ -15,7 +15,7 @@
 
 # Abstract
 
-A widely implelmented UI element in desktop and mobile applications is an "icon badge," a small image laid over an application icon in a dock, panel or taskbar to indicate a change of state or provide notification of an update. The badge is typically removed when the application is brought into focus. A common example of this is a numeric image on an email program that indicates the number of new or unread messages. This TIP proposes to add a "wm iconbadge" command to Tk to provide this functionality. 
+A widely implemented UI element in desktop and mobile applications is an "icon badge," a small image laid over an application icon in a dock, panel or taskbar to indicate a change of state or provide notification of an update. The badge is typically removed when the application is brought into focus. A common example of this is a numeric image on an email program that indicates the number of new or unread messages. This TIP proposes to add a "wm iconbadge" command to Tk to provide this functionality. 
 
 # Design
 
@@ -25,7 +25,7 @@ A widely implelmented UI element in desktop and mobile applications is an "icon 
 
  * Mac: NSDockTile [https://developer.apple.com/documentation/appkit/nsdocktile?language=objc](https://developer.apple.com/documentation/appkit/nsdocktile?language=objc)
 
-The X11 implementation will be based on the "wm iconphoto" command and incorporate additional custom badge images that will be shipped with Tk. 
+The X11 implementation will be based on the "wm iconphoto" command and incorporate additional custom badge images that will be shipped with Tk.
 
 The Windows implementation will use the custom badge images developed for this TIP and render them via the native "ITaskbarList3::SetOverlayIcon" API. 
 
@@ -36,9 +36,7 @@ The wm iconbadge command will present a script-level public API implementing the
 
  > **wm iconbadge** _window_ _badge_
 
-This command sets an icon badge over Wish's application icon as it appears in the Dock (macOS), taskbar (Windows) or application panel (X11). The "badge" argument at present is either a number to indicate a number of new messages or other data points, or an exclamation point to indicate a general call to attention. If the "badge" argument is set to an empty string, the badge icon is removed. 
-
-Moreover, the **wm iconphoto** _window_ command will now return the current image set for the titlebar icon (instead of returning an error).
+This command sets an icon badge over a toplevel window icon as it appears in the Dock (macOS), taskbar (Windows) or application panel (X11). The "badge" argument is either a number to indicate a number of new messages or other data points, or an exclamation point to indicate a general call to attention. If the "badge" argument is set to an empty string, the badge icon is removed. 
 
 # Example
 
@@ -46,11 +44,17 @@ To set a badge icon with the number five over the application icon:
 
 	wm iconbadge . 5
 
+To call for attention: 
+
+	wm iconbadge . !
+
 To remove the badge: 
 
 	wm iconbadge . ""
 
-A full demonstration of this command in action has been added to the Tk widget demo under the "Miscellaneous" section, "Window icons and badges." Since the API is very simple, one can get a better understanding of the functionality by actually testing it in the demo.
+On X11, variable ::tk::icons::base_icon($toplevelwindow) must be set to the base icon (that is: the icon without badge) before calling **wm iconbadge**. **wm iconphoto $window ::tk::icons::base_icon($toplevelwindow)** will get called under the hood.
+
+A demonstration of this command in action has been added to the Tk widget demo under the "Miscellaneous" section, "Window icons and badges." Since the API is very simple, one can get a better understanding of the functionality by actually testing it in the demo.
 
 Screenshot of the wm iconbadge on all three platforms:
 
@@ -59,7 +63,7 @@ Screenshot of the wm iconbadge on all three platforms:
 
 # Implementation 
 
-A draft implementation is currently under development in the [tk_badges](https://core.tcl-lang.org/tk/timeline?r=tk_badges) branch.
+See [tk_badges](https://core.tcl-lang.org/tk/timeline?r=tk_badges) branch.
 
 # Copyright
 
