--- a/tip/601.md
+++ b/tip/601.md
@@ -65,7 +65,7 @@ Here is a code snipped with the current implementation:
         -code 1\
         -level 0
         -errorstack {INNER {invokeStk1 ::tcl::encoding::convertfrom utf-8 Ã\x84Ã }}
-        -errorcode {TCL ENCODING STOPONERROR 2}
+        -errorcode {TCL ENCODING ILLEGALSEQUENCE 2}
         -errorinfo {unexpected byte sequence starting at index 2: '\xC3'
             while executing
             "encoding convertfrom utf-8 [string range [encoding convertto utf-8 ÄÖ] 0 end-1]"} -errorline 1
@@ -121,7 +121,7 @@ The error code is composed of the following 4 list elements:
 
 1.  Fix word: `TCL`
 2.  Fix word: `ENCODING`
-3.  Fix word: `STOPONERROR`
+3.  Fix word: `ILLEGALSEQUENCE`
 4.  Value *error position*: The index in the source string (usually a byte array, in case of `encoding convertfrom`) of the error position.
 
 ## New C API
@@ -159,7 +159,7 @@ This design allows to catch this error and get the error position by the followi
 
     try {
         set res [encoding convertto iso8859-1 $input]
-    } trap {TCL ENCODING STOPONERROR} {errorMessage errorDict} {
+    } trap {TCL ENCODING ILLEGALSEQUENCE} {errorMessage errorDict} {
         set errorIndex [lindex [dict get $errorDict -errorcode] 3]
         ...
     }
