--- a/tip/599.md
+++ b/tip/599.md
@@ -1,10 +1,14 @@
 # TIP 599: Extended build information
 	Author:         Jan Nijtmans <jan.nijtmans@gmail.com>
-	State:          Draft
+	State:          Final
 	Type:           Project
-	Vote:           In progress
+	Vote:           Done
 	Tcl-Version:    8.7
 	Tcl-Branch:     build-info
+	Vote-Summary    Accepted 5/0/0
+	Votes-For:      BG, JN, KW, MC, SL
+	Votes-Against:  none
+	Votes-Present:  none
 -----
 # Abstract
 
