Extend TIP #613 text

--- a/tip/613.md
+++ b/tip/613.md
@@ -12,11 +12,15 @@
 
 # Abstract
 
-This TIP proposes a new <b>INDEX\_NULL\_OK</b> flag for <b>Tcl\_GetIndexFromObj*()</b>  as <b>TCL\_INDEX\_NULL\_OK</b>.
+This TIP proposes a new `INDEX\_NULL\_OK` flag for `Tcl\_GetIndexFromObj*()` as `TCL\_INDEX\_NULL\_OK`.
+
+It also proposes to implement the `TCL\_OPTION\_NULL\_OK` flag in Tk for the
+options `TK\_OPTION\_BOOLEAN`, `TK_OPTION_JUSTIFY` and `TK_OPTION_ANCHOR`, in
+the same way as already present for `TK\_OPTION\_RELIEF`.
 
 # Rationale
 
-In <b>Tk</b>, serveral options allow the empty string, but since <b>Tcl\_GetIndexFromObjStruct()</b> cannot handle
+In <b>Tk</b>, serveral options allow the empty string, but since `Tcl\_GetIndexFromObjStruct()` cannot handle
 the empty string as input well, this results in special code in Tk to handle that. This is
 not always done correctly, e.g.:
 <pre>
@@ -35,9 +39,9 @@ So, the error-message doesn't even mention that "" is a valid value, or it forge
 to quote the empty value.
 
 The cause of the problem is [here](https://core.tcl-lang.org/tk/file?udc=1&ln=27&ci=73d9515d7f13f6fa&name=generic%2FtkTextTag.c):
-the empty string is made part of a string array used by <b>Tcl\_GetIndexFromObj*()</b>.
+the empty string is made part of a string array used by `Tcl\_GetIndexFromObj*()`.
 
-The meaning of <b>TCL\_INDEX\_NULL\_OK</b> is that <b>Tcl\_GetIndexFromObj*()</b> no longer
+The meaning of `TCL\_INDEX\_NULL\_OK` is that <b>Tcl\_GetIndexFromObj*()</b> no longer
 gives an error when objPtr is supplied a NULL or "" argument, but it will return TCL_OK
 and provide the index "-1". This functionality can then be used by Tk:
 <pre>
@@ -50,9 +54,33 @@ bad wrap "foo": must be char, none, word, or ""
 % 
 </pre>
 
+For Tk, the enum's `Tk\_Anchor` and `Tk\_Justify` will get new members
+`TK\_ANCHOR\_NULL` resp. `TK\_JUSTIFY\_NULL` with value -1, equivalent with
+the already existing `TK\_RELIEF\_NULL` (which is not an enum for historical reasons).
+Without the `TCL\_OPTION\_NULL\_OK` flag in the `TK_OPTION_JUSTIFY` and `TK_OPTION_ANCHOR`
+config information, everything functions as before, but when using the
+`TCL\_INDEX\_NULL\_OK` the new enum values become valid values for those configuration options.
+
+For `TK\_OPTION\_BOOLEAN`, the new possible value, when using the `TCL\_OPTION\_NULL\_OK`
+flag, is -1.
+
+# Caveat
+
+Some extensions might have set the `TCL\_OPTION\_NULL\_OK` flag already, even
+though it never worked. This might result in "" as possible option value, which was
+previously impossible, and what might lead to new unexpected behavior. An example
+of that is [this](https://core.tcl-lang.org/tk/tktview?name=6178610b1b)
+bug (to be fixed soon) in Themed Tk. Solution: the extension should
+no longer use the `TCL\_OPTION\_NULL\_OK` flag, or expect Tcl 8.7 as a minimum
+and take care that the value -1 is handled properly.
+
 # Implementation
 
-Available in the [`tip-613`](https://core.tcl-lang.org/tcl/timeline?r=tip-613&unhide) branch.
+Available in the [`tip-613`](https://core.tcl-lang.org/tcl/timeline?r=tip-613) branch.
+
+There's a [`tip-613`](https://core.tcl-lang.org/tk/timeline?r=tip-613) branch in Tk as
+well, implementing the `TCL\_OPTION\_NULL\_OK` flag for `TK\_OPTION\_BOOLEAN`,
+`TK_OPTION_JUSTIFY` and `TK_OPTION_ANCHOR`, using the `TCL\_INDEX\_NULL\_OK` flag.
 
 This branch targets 8.7.
 
