--- a/tip/613.md
+++ b/tip/613.md
@@ -12,15 +12,15 @@
 
 # Abstract
 
-This TIP proposes a new `INDEX\_NULL\_OK` flag for `Tcl\_GetIndexFromObj*()` as `TCL\_INDEX\_NULL\_OK`.
+This TIP proposes a new `INDEX_NULL_OK` flag for `Tcl_GetIndexFromObj*()` as `TCL_INDEX_NULL_OK`.
 
-It also proposes to implement the `TCL\_OPTION\_NULL\_OK` flag in Tk for the
-options `TK\_OPTION\_BOOLEAN`, `TK_OPTION_JUSTIFY` and `TK_OPTION_ANCHOR`, in
-the same way as already present for `TK\_OPTION\_RELIEF`.
+It also proposes to implement the `TCL_OPTION_NULL_OK` flag in Tk for the
+options `TK_OPTION_BOOLEAN`, `TK_OPTION_JUSTIFY` and `TK_OPTION_ANCHOR`, in
+the same way as already present for `TK_OPTION_RELIEF`.
 
 # Rationale
 
-In <b>Tk</b>, serveral options allow the empty string, but since `Tcl\_GetIndexFromObjStruct()` cannot handle
+In <b>Tk</b>, serveral options allow the empty string, but since `Tcl_GetIndexFromObjStruct()` cannot handle
 the empty string as input well, this results in special code in Tk to handle that. This is
 not always done correctly, e.g.:
 <pre>
@@ -39,9 +39,9 @@ So, the error-message doesn't even mention that "" is a valid value, or it forge
 to quote the empty value.
 
 The cause of the problem is [here](https://core.tcl-lang.org/tk/file?udc=1&ln=27&ci=73d9515d7f13f6fa&name=generic%2FtkTextTag.c):
-the empty string is made part of a string array used by `Tcl\_GetIndexFromObj*()`.
+the empty string is made part of a string array used by `Tcl_GetIndexFromObj*()`.
 
-The meaning of `TCL\_INDEX\_NULL\_OK` is that <b>Tcl\_GetIndexFromObj*()</b> no longer
+The meaning of `TCL_INDEX_NULL_OK` is that `Tcl_GetIndexFromObj*()` no longer
 gives an error when objPtr is supplied a NULL or "" argument, but it will return TCL_OK
 and provide the index "-1". This functionality can then be used by Tk:
 <pre>
@@ -54,24 +54,24 @@ bad wrap "foo": must be char, none, word, or ""
 % 
 </pre>
 
-For Tk, the enum's `Tk\_Anchor` and `Tk\_Justify` will get new members
-`TK\_ANCHOR\_NULL` resp. `TK\_JUSTIFY\_NULL` with value -1, equivalent with
-the already existing `TK\_RELIEF\_NULL` (which is not an enum for historical reasons).
-Without the `TCL\_OPTION\_NULL\_OK` flag in the `TK_OPTION_JUSTIFY` and `TK_OPTION_ANCHOR`
+For Tk, the enum's `Tk_Anchor` and `Tk_Justify` will get new members
+`TK_ANCHOR_NULL` resp. `TK_JUSTIFY_NULL` with value -1, equivalent with
+the already existing `TK_RELIEF_NULL` (which is not an enum for historical reasons).
+Without the `TCL_OPTION_NULL_OK` flag in the `TK_OPTION_JUSTIFY` and `TK_OPTION_ANCHOR`
 config information, everything functions as before, but when using the
-`TCL\_INDEX\_NULL\_OK` the new enum values become valid values for those configuration options.
+`TCL_INDEX_NULL_OK` the new enum values become valid values for those configuration options.
 
-For `TK\_OPTION\_BOOLEAN`, the new possible value, when using the `TCL\_OPTION\_NULL\_OK`
+For `TK_OPTION_BOOLEAN`, the new possible value, when using the `TCL_OPTION_NULL_OK`
 flag, is -1.
 
 # Caveat
 
-Some extensions might have set the `TCL\_OPTION\_NULL\_OK` flag already, even
+Some extensions might have set the `TCL_OPTION_NULL_OK` flag already, even
 though it never worked. This might result in "" as possible option value, which was
 previously impossible, and what might lead to new unexpected behavior. An example
 of that is [this](https://core.tcl-lang.org/tk/tktview?name=6178610b1b)
 bug (to be fixed soon) in Themed Tk. Solution: the extension should
-no longer use the `TCL\_OPTION\_NULL\_OK` flag, or expect Tcl 8.7 as a minimum
+no longer use the `TCL_OPTION_NULL_OK` flag, or expect Tcl 8.7 as a minimum
 and take care that the value -1 is handled properly.
 
 # Implementation
@@ -79,8 +79,8 @@ and take care that the value -1 is handled properly.
 Available in the [`tip-613`](https://core.tcl-lang.org/tcl/timeline?r=tip-613) branch.
 
 There's a [`tip-613`](https://core.tcl-lang.org/tk/timeline?r=tip-613) branch in Tk as
-well, implementing the `TCL\_OPTION\_NULL\_OK` flag for `TK\_OPTION\_BOOLEAN`,
-`TK_OPTION_JUSTIFY` and `TK_OPTION_ANCHOR`, using the `TCL\_INDEX\_NULL\_OK` flag.
+well, implementing the `TCL_OPTION_NULL_OK` flag for `TK_OPTION_BOOLEAN`,
+`TK_OPTION_JUSTIFY` and `TK_OPTION_ANCHOR`, using the `TCL_INDEX_NULL_OK` flag.
 
 This branch targets 8.7.
 
